--- a/vtl-bundles/vtl-r/vtl-editor/pom.xml
+++ b/vtl-bundles/vtl-r/vtl-editor/pom.xml
@@ -162,7 +162,9 @@
 					</execution>
 				</executions>
 				<configuration>
-					<descriptor>src/assembly/bundle.xml</descriptor>
+					<descriptors>
+						<descriptor>src/assembly/bundle.xml</descriptor>
+					</descriptors>
 					<attach>true</attach>
 				</configuration>
 			</plugin>
