--- a/pom.xml
+++ b/pom.xml
@@ -214,8 +214,9 @@
 		<sdmx.version>3.0.6</sdmx.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.release>11</maven.compiler.release>
 		<bundle.plugin.version>5.1.9</bundle.plugin.version>
 		<aws.version>1.12.161</aws.version>
 		<sf-fs.version>3.0.0-M3</sf-fs.version>
@@ -235,7 +236,7 @@
 		<spring.boot.version>2.7.13</spring.boot.version>
 		<node.version>v10.20.1</node.version>
 		<antlr4.version>4.8</antlr4.version>
-		<io.sdmx.version>1.0.42</io.sdmx.version>
+		<io.sdmx.version>1.0.43</io.sdmx.version>
 		<guava.version>30.1.1-jre</guava.version>
 		<scm-url>https://github.com/vpinna80/VTL</scm-url>
 		<site-url>https://vpinna80.github.io/VTL</site-url>
@@ -389,7 +390,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-slf4j-impl</artifactId>
+				<artifactId>log4j-slf4j2-impl</artifactId>
 				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
