--- a/vtl-envs/vtl-renv/pom.xml
+++ b/vtl-envs/vtl-renv/pom.xml
@@ -50,8 +50,10 @@
 			<artifactId>vtl-envutil</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.github.lucarosellini.rJava</groupId>
-			<artifactId>JRI</artifactId>
+			<groupId>org.rosuda.JRI</groupId>
+			<artifactId>Rengine</artifactId>
+			<version>4.3.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
