--- a/vtl-envs/vtl-renv/pom.xml
+++ b/vtl-envs/vtl-renv/pom.xml
@@ -36,6 +36,10 @@
 	<name>vtl-renv</name>
 	<description>Implementation of R VTL environment</description>
 
+	<properties>
+		<r.runtime.version>4.2.0</r.runtime.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
@@ -52,7 +56,7 @@
 		<dependency>
 			<groupId>org.rosuda.JRI</groupId>
 			<artifactId>Rengine</artifactId>
-			<version>4.3.1</version>
+			<version>${r.runtime.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
