--- a/vtl-envs/vtl-spark/pom.xml
+++ b/vtl-envs/vtl-spark/pom.xml
@@ -55,7 +55,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-sql_2.12</artifactId>
+			<artifactId>spark-sql_${scala.compat.version}</artifactId>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
