--- a/vtl-bundles/vtl-r/RVTL/src/main/resources/R/DESCRIPTION
+++ b/vtl-bundles/vtl-r/RVTL/src/main/resources/R/DESCRIPTION
@@ -5,8 +5,8 @@ Author: Valentino Pinna, Attilio Mattiocco, Banca d'Italia
 Maintainer: Valentino Pinna <valentino.pinna@bancaditalia.it>
 Description: R wrapper for VTL Engine
     This package contains functions and a shiny UI for dealing with the Validation and Transformation Language.
-Depends: R (>= 3.3.0), rJava (>= 0.8-8), R6
-Imports: igraph, networkD3, shiny, shinydashboard, shinyjs, xtable, dplyr, sortable, DT
+Depends: R (>= 3.3.0), rJava (>= 0.8-8), R6, shiny
+Imports: igraph, networkD3, shinydashboard, shinyjs, sortable, DT, data.table
 Suggests: testthat, RJSDMX (>= 2.3-3)
 SystemRequirements: Java (>= 8)
 License: EUPL
