--- a/vtl-engine/pom.xml
+++ b/vtl-engine/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 <!--
 
     Copyright © 2020 Banca D'Italia
@@ -19,7 +20,8 @@
     permissions and limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -85,12 +87,12 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>2.5.0</version>
+				<version>3.1.0</version>
 				<dependencies>
 					<dependency>
 						<groupId>com.github.sabomichal</groupId>
 						<artifactId>immutable-xjc-plugin</artifactId>
-						<version>1.6</version>
+						<version>2.0.2</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -100,10 +102,13 @@
 							<goal>xjc</goal>
 						</goals>
 						<configuration>
-							<packageName>it.bancaditalia.oss.vtl.impl.engine.mapping.xml</packageName>
-							<args>
-								<arg>-immutable</arg>
-							</args>
+							<packageName>
+								it.bancaditalia.oss.vtl.impl.engine.mapping.xml</packageName>
+							<locale>en</locale>
+							<arguments>
+								<argument>-Ximm</argument>
+								<argument>-Ximm-nofinalclasses</argument>
+							</arguments>
 						</configuration>
 					</execution>
 				</executions>
@@ -116,7 +121,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
-					<excludePackageNames>it.bancaditalia.oss.vtl.impl.engine.mapping.xml</excludePackageNames>
+					<excludePackageNames>
+						it.bancaditalia.oss.vtl.impl.engine.mapping.xml</excludePackageNames>
 				</configuration>
 			</plugin>
 			<plugin>
