--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,8 @@
 		<log4j.version>2.20.0</log4j.version>
 		<jetty.version>11.0.15</jetty.version>
 		<jackson.version>2.15.2</jackson.version>
+		<jaxb.version>4.0.1</jaxb.version>
+		<jaxb.runtime.version>4.0.3</jaxb.runtime.version>
 		<junit.version>5.10.0</junit.version>
 		<junit-jupiter.version>${junit.version}</junit-jupiter.version>
 		<mockito.version>5.2.0</mockito.version>
@@ -236,7 +238,7 @@
 		<spring.boot.version>2.7.13</spring.boot.version>
 		<node.version>v10.20.1</node.version>
 		<antlr4.version>4.8</antlr4.version>
-		<io.sdmx.version>1.0.43</io.sdmx.version>
+		<io.sdmx.version>1.0.48</io.sdmx.version>
 		<guava.version>30.1.1-jre</guava.version>
 		<scm-url>https://github.com/vpinna80/VTL</scm-url>
 		<site-url>https://vpinna80.github.io/VTL</site-url>
@@ -307,6 +309,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>jakarta.activation</groupId>
+				<artifactId>jakarta.activation-api</artifactId>
+				<version>2.0.1</version>
+			</dependency>
+  			<dependency>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-runtime</artifactId>
 				<version>${antlr4.version}</version>
@@ -314,12 +321,12 @@
 			<dependency>
 				<groupId>jakarta.xml.bind</groupId>
 				<artifactId>jakarta.xml.bind-api</artifactId>
-				<version>2.3.2</version>
+				<version>${jaxb.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish.jaxb</groupId>
 				<artifactId>jaxb-runtime</artifactId>
-				<version>2.3.2</version>
+				<version>${jaxb.runtime.version}</version>
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
