--- a/vtl-envs/vtl-sdmxenv/pom.xml
+++ b/vtl-envs/vtl-sdmxenv/pom.xml
@@ -51,7 +51,7 @@
 		</dependency>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
-			<artifactId>vtl-metafmr</artifactId>
+			<artifactId>vtl-metasdmx</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
