--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -48,7 +48,7 @@
 			</modules>
 		</profile>
 		<profile>
-      		<id>with-fmr</id>
+      		<id>with-sdmx</id>
       		<modules>
 				<module>vtl-sdmxenv</module>
       		</modules>
