--- a/pom.xml
+++ b/pom.xml
@@ -266,8 +266,7 @@
 		<guava.version>30.1.1-jre</guava.version>
 		<scm-url>https://github.com/vpinna80/VTL</scm-url>
 		<site-url>https://vpinna80.github.io/VTL</site-url>
-		<license-url>
-			https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt</license-url>
+		<license-url>https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt</license-url>
 	</properties>
 
 	<reporting>
