--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.1.2-SNAPSHOT</revision>
+		<revision>1.1.2</revision>
 		<sdmx.version>3.0.6</sdmx.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -917,7 +917,7 @@
 				<plugin>
 					<groupId>org.sonatype.plugins</groupId>
 					<artifactId>nexus-staging-maven-plugin</artifactId>
-					<version>1.6.8</version>
+					<version>1.6.13</version>
 					<extensions>true</extensions>
 					<configuration>
 						<serverId>ossrh</serverId>
