--- a/vtl-bundles/vtl-rest/pom.xml
+++ b/vtl-bundles/vtl-rest/pom.xml
@@ -122,6 +122,13 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<attachClasses>true</attachClasses>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
