--- a/vtl-bundles/vtl-coverage/pom.xml
+++ b/vtl-bundles/vtl-coverage/pom.xml
@@ -43,7 +43,17 @@
 				<dependency>
 					<groupId>it.bancaditalia.oss.vtl</groupId>
 					<artifactId>vtl-rest</artifactId>
-					<type>war</type>
+					<version>${project.version}</version>
+					<classifier>classes</classifier>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>with-spark</id>
+			<dependencies>
+				<dependency>
+					<groupId>it.bancaditalia.oss.vtl</groupId>
+					<artifactId>vtl-spark</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -53,7 +63,31 @@
 				<dependency>
 					<groupId>it.bancaditalia.oss.vtl</groupId>
 					<artifactId>vtl-cli</artifactId>
-					<type>jar</type>
+					<version>${project.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>with-jupyter</id>
+			<dependencies>
+				<dependency>
+					<groupId>it.bancaditalia.oss.vtl</groupId>
+					<artifactId>vtl-jupyter</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>with-r</id>
+			<dependencies>
+				<dependency>
+					<groupId>it.bancaditalia.oss.vtl</groupId>
+					<artifactId>vtl-java2r</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>it.bancaditalia.oss.vtl</groupId>
+					<artifactId>vtl-renv</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -74,15 +108,43 @@
 	<dependencies>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
-			<artifactId>vtl-bundle-deps</artifactId>
-			<version>${project.version}</version>
-			<type>pom</type>
-			<scope>test</scope>
+			<artifactId>vtl-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-types</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-engine</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-parser</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-confman</artifactId>
-			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-transform</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-envbase</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-metabase</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-metajson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-session</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -112,7 +174,8 @@
 							<report>report-aggregate</report>
 						</reports>
 						<configuration>
-							<outputDirectory>${project.basedir}/../target/site/jacoco-aggregate</outputDirectory>
+							<outputDirectory>${project.basedir}/../../target/site/jacoco-aggregate</outputDirectory>
+							<includeCurrentProject>true</includeCurrentProject>
 						</configuration>
 					</reportSet>
 				</reportSets>
@@ -125,13 +188,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>flatten-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<skip>true</skip>
-					</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -147,6 +203,19 @@
 				<configuration>
 					<test>**/IntegrationTestSuite</test>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>aggregate</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report-aggregate</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
